--- a/src/app/tv-shows-page/tv-shows-page.component.html
+++ b/src/app/tv-shows-page/tv-shows-page.component.html
@@ -54,12 +54,14 @@
 
 <div *ngIf="shows.length === 0 && !noResultsFound">
   <div class="container my-4">
+      <div *ngIf="userId">
+
     <h2 class="text-white mb-3 ms-5">Recommended For You</h2>
     <carousel
       [items]="recommendedShows"
       (trailer)="openTrailer($event)"
     ></carousel>
-
+</div>
     <h2 class="text-white mb-3 ms-5 mt-5">Top Rated</h2>
     <carousel [items]="topRated" (trailer)="openTrailer($event)"></carousel>
 
