--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -5,7 +5,18 @@
   min-height: 100vh;
   background-color: #f8f9fa;
 }
+.continue-guest {
+  text-decoration: none;
+  color: rgb(122, 111, 111);
+}
 
+.continue-guest:hover {
+  text-decoration: none;
+  color: black;
+}
+a {
+  text-decoration: none;
+}
 .login-card {
   width: 100%;
   max-width: 400px;
@@ -18,7 +29,7 @@
   width: 100%;
   max-width: 400px;
   padding: 2rem;
-  background: rgb(34, 26, 26) ;
+  background: rgb(34, 26, 26);
   border-radius: 12px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
 }
@@ -157,4 +168,3 @@
   color: var(--text-color-secondary);
   font-size: 1.1rem;
 }
-
