--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -97,6 +97,7 @@
 
       <div class="signup-link">
         <p>Don't have an account? <a routerLink="/signup">Sign up</a></p>
+       <a routerLink="/home" class="continue-guest"><p class="mt-3 " style=" font-size: small; color: rgb(122, 111, 111) ;font-weight: bold;">Continue as guest </p></a>
       </div>
     </form>
   </div>
