Applied navbar active styles

--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -4,3 +4,6 @@
  .custom-navbar .p-menubar-mobile .p-menubar-button{
 margin-top: 500px;    left: 0
  }
+[data-theme=dark] .login-btn{
+    background-color: transparent !important;
+}
