--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,32 +1,44 @@
 <div class="navbar-container">
-  <p-menubar
-    [model]="menuItems"
-    styleClass="custom-navbar"
-    class="custom-navbar"
-  >
-    <ng-template pTemplate="start">
-      <div class="navbar-logo">
-        <span class="navbar-title">🎬 Movie App</span>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="end">
-      <div style="display: flex; align-items: center; justify-content: center">
-        <app-toogle-theme class="mt-1"></app-toogle-theme>
-        @if(userId){
-        <div
-          style="cursor: pointer; border: none; font-size: 24px; color: red"
-          class="me-1"
-          (click)="logout()"
-        >
-          <i class="bi bi-box-arrow-right"></i>
-        </div>
+  <p-menubar [model]="menuItems" styleClass="custom-navbar" class="custom-navbar">
+  <ng-template pTemplate="start">
+    <div class="navbar-logo">
+      <span class="navbar-title">🎬 Movie App</span>
+    </div>
+  </ng-template>
 
-        } @else {
-        <a routerLink="/login"><p-button> Login</p-button></a>
-        }
+  <ng-template pTemplate="item" let-item>
+    <a
+      *ngIf="item.routerLink"
+      [routerLink]="item.routerLink"
+      routerLinkActive="active-nav-item"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="nav-link"
+      >{{ item.label }}</a
+    >
+  </ng-template>
+
+  <ng-template pTemplate="end">
+    <div style="display: flex; align-items: center; justify-content: center">
+      <app-toogle-theme class="mt-1"></app-toogle-theme>
+      @if(userId){
+      <div
+        style="cursor: pointer; border: none; font-size: 24px; color: red"
+        class="me-1"
+        (click)="logout()"
+      >
+        <i class="bi bi-box-arrow-right"></i>
       </div>
-    </ng-template>
-  </p-menubar>
+      } @else {
+      <a routerLink="/login"
+        ><p-button severity="help" styleClass="login-btn" class="login-btn"
+          >Login</p-button
+        ></a
+      >
+      }
+    </div>
+  </ng-template>
+</p-menubar>
+
 </div>
 
 <app-chatbot></app-chatbot>
