--- a/src/app/trailer/trailer.component.html
+++ b/src/app/trailer/trailer.component.html
@@ -58,7 +58,7 @@
             z-index: 10;
           "
         >
-          <button
+          <button style="display: flex; padding: 10px 20px"
             (click)="toggleMute()"
             class="btn btn-outline-light btn-sm"
             [title]="isMuted ? 'Unmute' : 'Mute'"
