--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -32,7 +32,7 @@
         style="width: 100%; padding-right: 30px"
       />
 
-      <i
+      <i *ngIf="searchQuery"
         (click)="reset()"
         class="pi pi-times"
         style="
@@ -67,7 +67,7 @@
 
 } }@else {
 
-<div class="container my-4">
+<div class="container-fluid my-4" style="width: 80%;">
   <div *ngIf="userId">
 
   
